Создана 1 секция и дизайн для неё

--- a/index.html
+++ b/index.html
@@ -24,5 +24,13 @@
             </ul>
         </nav>
     </header>
+    
+    <main>
+        <section class="aboutgit">
+                <h2 class="aboutgit_Z">Что такое GitHub?</h2>
+                <p class="aboutgit_T">Веб-сервис для хостинга и управления проектами, использующий систему контроля версий Git. Он позволяет разработчикам хранить свои кодовые репозитории, отслеживать изменения, совместно работать над проектами и сотрудничать с другими программистами. GitHub упрощает процессы разработки, позволяя пользователям создавать задачи, оставлять комментарии и отзывы на код, а также интегрироваться с различными инструментами и сервисами. Кроме того, он поддерживает множество открытых проектов, что делает его важной частью сообщества разработчиков. С GitHub также связаны инструменты для автоматизации процессов разработки, безопасности кода и образовательные ресурсы.</p>
+
+        </section>
+    </main> 
 </body>
 </html>
