Создана 2 секция и дизайн для неё

--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
             </ul>
         </nav>
     </header>
-    
     <main>
-        <section class="aboutgit">
-                <h2 class="aboutgit_Z">Что такое GitHub?</h2>
-                <p class="aboutgit_T">Веб-сервис для хостинга и управления проектами, использующий систему контроля версий Git. Он позволяет разработчикам хранить свои кодовые репозитории, отслеживать изменения, совместно работать над проектами и сотрудничать с другими программистами. GitHub упрощает процессы разработки, позволяя пользователям создавать задачи, оставлять комментарии и отзывы на код, а также интегрироваться с различными инструментами и сервисами. Кроме того, он поддерживает множество открытых проектов, что делает его важной частью сообщества разработчиков. С GitHub также связаны инструменты для автоматизации процессов разработки, безопасности кода и образовательные ресурсы.</p>
+        <section class="aboutgithub">
+                <h2 class="aboutgithub_Z">Что такое GitHub?</h2>
+                <p class="aboutgithub_T">Веб-сервис для хостинга и управления проектами, использующий систему контроля версий Git. Он позволяет разработчикам хранить свои кодовые репозитории, отслеживать изменения, совместно работать над проектами и сотрудничать с другими программистами. GitHub упрощает процессы разработки, позволяя пользователям создавать задачи, оставлять комментарии и отзывы на код, а также интегрироваться с различными инструментами и сервисами. Кроме того, он поддерживает множество открытых проектов, что делает его важной частью сообщества разработчиков. С GitHub также связаны инструменты для автоматизации процессов разработки, безопасности кода и образовательные ресурсы.</p>
+        </section>
 
+        <section class="aboutgit">
+            <h2 class="aboutgit_Z">Что такое Git?</h2>
+            <p class="aboutgit_T">Git — это система управления версиями, которая позволяет разработчикам отслеживать изменения в коде и эффективно координировать работу над проектами. Важной особенностью Git является его распределённая природа, что означает, что каждый разработчик имеет полную копию репозитория с историей изменений на своём компьютере. Это придаёт гибкость и удобство в работе, позволяя выполнять множество операций локально, что облегчает процесс разработки.</p>
         </section>
     </main> 
 </body>
