--- a/index.html
+++ b/index.html
@@ -34,6 +34,43 @@
             <h2 class="aboutgit_Z">Что такое Git?</h2>
             <p class="aboutgit_T">Git — это система управления версиями, которая позволяет разработчикам отслеживать изменения в коде и эффективно координировать работу над проектами. Важной особенностью Git является его распределённая природа, что означает, что каждый разработчик имеет полную копию репозитория с историей изменений на своём компьютере. Это придаёт гибкость и удобство в работе, позволяя выполнять множество операций локально, что облегчает процесс разработки.</p>
         </section>
+
+        <section class="differens">
+            <h2 class="differens_Z">Отличия Git от GitHub</h2>
+            <div class="differens-container">
+                <div class="differens-container_left">
+                    <h3 class="differens_git_Z">Git</h3>
+                     <p class="differens_git_T">
+                     <b>Определение:</b> Система управления версиями для отслеживания изменений в файлах.
+                     <br><b>Тип:</b> Локальный инструмент.
+                     <br><b>Функциональность:</b> Операции управления версиями.
+                     <br><b>Хранилище:</b> Локальные репозитории.
+                     <br><b>Работа в команде:</b> Локальная поддержка совместной работы.
+                     <br><b>Интерфейс:</b> Командная строка.
+                     <br><b>Цены:</b> Бесплатный и с открытым исходным кодом.
+                     <br><b>Сообщество:</b> Нет собственного сообщества.
+                     <br><b>Интеграция:</b> Работает с любыми сервисами.
+                     <br><b>Приватность:</b> Полностью локальный.
+                    </p> 
+                </div>
+                <div class="differens-container_right">
+                    <h3 class="differens_github_Z">GitHub</h3>
+                    <p class="differens_github_T">
+                        <b>Определение:</b> Платформа для хостинга проектов, использующих Git.
+                        <br><b>Тип:</b> Удалённый сервис.
+                        <br><b>Функциональность:</b> Дополнительные функции для работы с проектами.
+                        <br><b>Хранилище:</b> Облачные репозитории.
+                        <br><b>Работа в команде:</b> Синхронизация работы над проектами.
+                        <br><b>Интерфейс:</b> Удобный веб-интерфейс.
+                        <br><b>Цены:</b> Бесплатные и платные тарифы.
+                        <br><b>Сообщество:</b> Большое сообщество разработчиков.
+                        <br><b>Интеграция:</b> Интеграция с множеством приложений.
+                        <br><b>Приватность:</b> Публичные и приватные репозитории.
+
+                    </p>
+                </div>
+            </div>
+        </section>
     </main> 
 </body>
 </html>
