Добавил 4 секцию и скрипт внутри body

--- a/index.html
+++ b/index.html
@@ -66,11 +66,22 @@
                         <br><b>Сообщество:</b> Большое сообщество разработчиков.
                         <br><b>Интеграция:</b> Интеграция с множеством приложений.
                         <br><b>Приватность:</b> Публичные и приватные репозитории.
-
                     </p>
                 </div>
             </div>
         </section>
-    </main> 
+        <section class="function" onclick="toggleText(this)">
+            <h2 class="function_Z">Основные функции GitHub</h2>
+            <p class="function_T"> <b>· Репозитории:</b> Основной элемент, где хранится код проекта, включая все его версии.
+                <br><b>· Ветки:</b> Позволяют параллельно разрабатывать функциональность или исправления, изолируя изменения.
+                <br><b>· Коммиты:</b> Сохраненные изменения в репозитории с комментарием, описывающим эти изменения.
+                <br><b>· Пулл-реквесты:</b> Предложения внести изменения из одной ветки в другую, с возможностью обсуждения и рецензирования.</p>
+        </section>
+    </main>
+    <script>
+        function toggleText(section) {
+            section.classList.toggle('show'); // Переключаем класс 'show'
+        }
+    </script>
 </body>
 </html>
