Добавил 2 последние секции и дизайн для них

--- a/index.html
+++ b/index.html
@@ -87,6 +87,16 @@
                 <br><b>· Projects:</b> Помогает организовывать и визуализировать задачи с помощью Kanban-досок.
             </p>
         </section>
+
+        <section class="learn">
+            <h2 class="learn_Z">Учебные ресурсы</h2>
+            <p class="learn_T">GitHub предлагает множество обучающих материалов, курсов и руководств для новичков и опытных пользователей.</p>
+        </section>
+
+        <section class="support">
+            <h2 class="support_Z">Поддержка</h2>
+            <p class="support_T">Активное сообщество и обширная документация, которая позволяет быстро решать проблемы и учиться новым функциям.</p>
+        </section>
     </main>
     
     
