Закончена работа над меню и её функционалом

--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
         <svg xmlns="http://www.w3.org/2000/svg"  width="75"  height="75"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-github"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" /></svg>
         <nav>
             <ul>
-                <li><a href="!#">Главная</a></li>
-                <li><a href="!#">Главная</a></li>
-                <li><a href="!#">Главная</a></li>
-                <li><a href="!#">Главная</a></li>
-                <li><a href="!#">Главная</a></li>
-                <li><a href="!#">Главная</a></li>
-                <li><a href="!#">Главная</a></li>
+                <li><a href="#aboutgithub">GitHub</a></li>
+                <li><a href="#aboutgit">Git</a></li>
+                <li><a href="#differens">Отличия G от GH</a></li>
+                <li><a href="#function">Основные функции GitHub</a></li>
+                <li><a href="#projects">Управление проектами</a></li>
+                <li><a href="#learn">Учебные ресурсы</a></li>
+                <li><a href="#support">Поддержка</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="aboutgithub">
+        <section id="aboutgithub">
                 <h2 class="aboutgithub_Z">Что такое GitHub?</h2>
                 <p class="aboutgithub_T">Веб-сервис для хостинга и управления проектами, использующий систему контроля версий Git. Он позволяет разработчикам хранить свои кодовые репозитории, отслеживать изменения, совместно работать над проектами и сотрудничать с другими программистами. GitHub упрощает процессы разработки, позволяя пользователям создавать задачи, оставлять комментарии и отзывы на код, а также интегрироваться с различными инструментами и сервисами. Кроме того, он поддерживает множество открытых проектов, что делает его важной частью сообщества разработчиков. С GitHub также связаны инструменты для автоматизации процессов разработки, безопасности кода и образовательные ресурсы.</p>
         </section>
 
-        <section class="aboutgit">
+        <section id="aboutgit">
             <h2 class="aboutgit_Z">Что такое Git?</h2>
             <p class="aboutgit_T">Git — это система управления версиями, которая позволяет разработчикам отслеживать изменения в коде и эффективно координировать работу над проектами. Важной особенностью Git является его распределённая природа, что означает, что каждый разработчик имеет полную копию репозитория с историей изменений на своём компьютере. Это придаёт гибкость и удобство в работе, позволяя выполнять множество операций локально, что облегчает процесс разработки.</p>
         </section>
 
-        <section class="differens">
+        <section id="differens">
             <h2 class="differens_Z">Отличия Git от GitHub</h2>
             <div class="differens-container">
                 <div class="differens-container_left">
@@ -71,7 +71,7 @@
             </div>
         </section>
 
-        <section class="function" onclick="toggleText(this)">
+        <section id="function" onclick="toggleText(this)">
             <h2 class="function_Z">Основные функции GitHub</h2>
             <p class="function_T"> <b>· Репозитории:</b> Основной элемент, где хранится код проекта, включая все его версии.
                 <br><b>· Ветки:</b> Позволяют параллельно разрабатывать функциональность или исправления, изолируя изменения.
@@ -79,7 +79,7 @@
                 <br><b>· Пулл-реквесты:</b> Предложения внести изменения из одной ветки в другую, с возможностью обсуждения и рецензирования.</p>
         </section>
 
-        <section class="projects" onclick="toggleText(this)">
+        <section id="projects" onclick="toggleText(this)">
             <h2 class="projects_Z">Управление проектами</h2>
             <p class="projects_T">
                 <b>· Issues:</b> Удобный инструмент для трекинга ошибок, задач и предложений по улучшению проекта.
@@ -88,12 +88,12 @@
             </p>
         </section>
 
-        <section class="learn">
+        <section id="learn">
             <h2 class="learn_Z">Учебные ресурсы</h2>
             <p class="learn_T">GitHub предлагает множество обучающих материалов, курсов и руководств для новичков и опытных пользователей.</p>
         </section>
 
-        <section class="support">
+        <section id="support">
             <h2 class="support_Z">Поддержка</h2>
             <p class="support_T">Активное сообщество и обширная документация, которая позволяет быстро решать проблемы и учиться новым функциям.</p>
         </section>
